// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls "kbn:bootstrap" script after installing deps, if it exists: script 1`] = `
Array [
  Array [
    "kbn:bootstrap",
    Array [],
    Project {
      "allDependencies": Object {},
      "json": Object {
        "name": "bar",
        "scripts": Object {
          "kbn:bootstrap": "node ./bar.js",
        },
        "version": "1.0.0",
      },
      "nodeModulesLocation": "<repoRoot>/packages/kbn-build/src/commands/packages/bar/node_modules",
      "packageJsonLocation": "<repoRoot>/packages/kbn-build/src/commands/packages/bar/package.json",
      "path": "<repoRoot>/packages/kbn-build/src/commands/packages/bar",
      "scripts": Object {
        "kbn:bootstrap": "node ./bar.js",
      },
      "targetLocation": "<repoRoot>/packages/kbn-build/src/commands/packages/bar/target",
    },
  ],
]
`;

exports[`does not run installer if no deps in package: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-build/src/commands",
    Array [],
  ],
]
`;

exports[`does not run installer if no deps in package: logs 1`] = `
Array [
  Array [
    "
Running installs in topological order:",
  ],
  Array [
    "

Installing dependencies in [kibana]:
",
  ],
  Array [
    "
Installs completed, linking package executables:
",
  ],
  Array [
    "
Bootstrapping completed!
",
  ],
]
`;

exports[`handles "frozen-lockfile": install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-build/src/commands",
    Array [
      "--frozen-lockfile",
    ],
  ],
]
`;

exports[`handles dependencies of dependencies: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-build/src/commands/packages/bar",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-build/src/commands",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-build/src/commands/packages/foo",
    Array [],
  ],
]
`;

exports[`handles dependencies of dependencies: logs 1`] = `
Array [
  Array [
    "
Running installs in topological order:",
  ],
  Array [
    "

Installing dependencies in [bar]:
",
  ],
  Array [
    "

Installing dependencies in [kibana]:
",
  ],
  Array [
    "

Installing dependencies in [foo]:
",
  ],
  Array [
    "
Installs completed, linking package executables:
",
  ],
  Array [
    "
Bootstrapping completed!
",
  ],
]
`;
